<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:fontFamily="serif"
    tools:context=".HomeActivity">


    <Button
        android:id="@+id/btn_consult"
        android:layout_width="188dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="160dp"
        android:text="@string/consult"
        style="@style/AppBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_design_top"
        android:layout_width="188dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="160dp"
        style="@style/AppBtnDesign"
        app:layout_constraintStart_toEndOf="@+id/btn_consult"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_design_bottom"
        android:layout_width="188dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bouton_design_arrondi"
        app:layout_constraintStart_toEndOf="@+id/btn_consult"
        app:layout_constraintTop_toBottomOf="@+id/btn_libocc" />

    <Button
        android:id="@+id/btn_libocc"
        android:layout_width="188dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/statut"
        style="@style/AppBtn"
        app:layout_constraintStart_toEndOf="@+id/btn_encheres"
        app:layout_constraintTop_toBottomOf="@+id/btn_station" />

    <Button
        android:id="@+id/btn_encheres"
        android:layout_width="188dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/encheres"
        style="@style/AppBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_consult" />

    <Button
        android:id="@+id/btn_activity"
        android:layout_width="188dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/activity"
        style="@style/AppBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_encheres" />

    <Button
        android:id="@+id/btn_station"
        android:layout_width="188dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/station"
        style="@style/AppBtn"
        app:layout_constraintStart_toEndOf="@+id/btn_consult"
        app:layout_constraintTop_toBottomOf="@+id/btn_design_top" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="409dp"
        android:layout_height="60sp"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/bar_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_position"
        android:layout_width="180sp"
        android:layout_height="60sp"
        android:text="@string/position_bottom"
        style="@style/AppBtnPos"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar" />

</androidx.constraintlayout.widget.ConstraintLayout>